--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -15,7 +15,7 @@
 
 .title {
   margin-right: auto;
-  font-weight: bold;
+  /* font-weight: bold; */
   letter-spacing: 1px;
   font-size: 1.2em;
   color: white;
