--- a/src/index.css
+++ b/src/index.css
@@ -28,6 +28,9 @@ ul {
   font-weight: bold;
   cursor: pointer;
   font-size: 1em;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 .btn:hover {
   background: #0000f9;
