--- a/src/pages/login/Login.css
+++ b/src/pages/login/Login.css
@@ -2,6 +2,9 @@
   max-width: 360px;
   margin: 60px auto;
   padding: 20px;
+  padding-right: 35px;
+  border: 3px solid black;
+  border-radius: 10px;
 }
 
 .login-form label {
@@ -19,4 +22,10 @@
   font-size: 1em;
   color: #777;
   width: 100%;
+}
+
+.login button {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
